--- a/css/csskit.css
+++ b/css/csskit.css
@@ -1,8 +1,158 @@
+.FormField.Radio ul:after
+{
+	display: block;
+	clear: both;
+	content: ""
+}
+.FormList
+{
+	width: 100%;
+}
+.FormListItem
+{
+	width: 100%;
+	padding: 0 0 1em 0;
+	margin: 0 0 1em 0;
+	border-bottom: solid 1px #ccc;
+}
+.FormList h3
+{
+	padding: 0 0 0.5em 0;
+}
+.FormList ul
+{
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+.FormList ul li:after
+{
+	display: block;
+	clear: both;
+	content: ""
+}
+.FormList ul li
+{
+	width: 100%;
+	position: relative;
+	background: none;
+	padding: 0 0 0.6em 0;
+}
+.FormList .FormLabel
+{
+	width: 20%;
+	float: left;
+	padding: 0.2em 1em 0 0;
+}
+.FormList .FormField
+{
+	width: 55%;
+	float: left;
+	position: relative;
+}
+
+.FormList .FormField input,
+.FormList .FormField textarea
+{
+	width: 98.5%;
+	/*overflow: auto;*/
+}
+.FormList .FormField a
+{
+	font-size: 0.8em;
+	margin: 0 0.5em 0 0;
+}
+.FormList .FormField label
+{
+	font-size: 0.8em;
+}
+.FormList .FormField select
+{
+	width: 99.5%;
+}
+.FormList .FormError
+{
+	width: 100%;
+	//font-size: 0;
+	clear: both;
+}
+.FormList .FormError span
+{
+	width: 100%;
+	display: block;
+	font-size: 0.8em;
+	color: Red;
+	padding: 0.3em 0 0 22%;
+	//font-size: 14px;
+}
+.FormList .errorlist
+{
+	display: block;
+	font-size: 0.8em;
+	color: Red;
+	padding: 0.3em 0 0 22%;
+	//font-size: 14px;
+	clear: both;
+}
+.FormList .errorlist li
+{
+	padding: 0;
+}
+.FormListInner
+{
+	background: #eee;
+	padding: 15px 0 0 0;
+}
+.FormField.Radio
+{
+
+}
+.FormField.Radio label
+{
+	font-size: 1.2em;
+	position: relative;
+}
+.FormField.Radio input
+{
+	width: auto !important;
+	position: relative;
+	top: 0.1em;
+}
+.FormField.Radio ul
+{
+	width: 100%;
+	padding: 0 !important;
+}
+.FormField.Radio li
+{
+	width: auto !important;
+	float: left;
+	padding: 0 5% 0 0;
+}
+.FormCheckbox input
+{
+	width: auto !important;
+}
+.FormButtons
+{
+	padding: 0 0 0 20%;
+}
+.FormSend
+{
+	width: 100%;
+}
+.messages
+{
+	/*border: solid 1px red;*/
+}
+
+/* Captcha */
 .CaptchaBlock
 {
 	width: 100%;
 	position: relative;
 	display: inline-block;
+	border: solid 1px red;
 }
 .CaptchaBlock .Captcha:after
 {
@@ -23,162 +173,50 @@
 }
 .CaptchaBlock .Captcha a
 {
+	display: block;
 	color: #009edd;
-	text-decoration: none;
-	border-bottom: dashed 1px #009edd;
+	font-size: 0.7em;
 }
 .CaptchaBlock .Captcha a:hover
 {
-	color: #df1e2c;
-	border-bottom: dashed 1px #df1e2c;
+	color: #ec860a;	
 }
 .CaptchaBlock .CaptchaInput
 {
-	width: 40px;
+	width: 50px;
 	float: left;
 	display: inline-block;
 	position: relative;
-	padding: 0.9em 0 0 0;
-	left: 3%;
-}
-.CaptchaBlock .CaptchaInput input 
-{
-	height: 1.4em !important;
-	text-align: center;
+	padding: 12px 0 0 5%;
 }
 
-.HideBlock
-{
-	width: 100%;
-	height: 100%;
-	min-height: 100%;
-	min-width: 985px;
-	background: url(../Images/TransparentBg.png);
-	position: fixed;
-	z-index: 1000;
-	left: 0;
-	top: 0;
-}
-
-.PopupWindow
-{
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	display: table;
-	z-index: 2000;
-	left: 0;
-	top: 0;
-}
-
-.PopupWindowInner
-{
-	width: 100%;
-	height: 100%;
-	position: relative;
-	display: table-cell;
-	vertical-align: middle;
-}
-.PopupWindowTR
-{
-	width: 100%;
-	position: relative;
-	//top: 50%;
-	
-}
-.PopupWindowClose
-{
-	display: block;
-	position: absolute;
-	top: 20px;
-	right: 5%;
-	font-size: 0.8em;
-	font-style: italic;
-	border-bottom: dashed 1px #555;
-	color: #555;
-	cursor: pointer;
-}
-.PopupWindowClose:hover
-{
-	border-bottom: dashed 1px #da2438 !important;
-	color: #da2438 !important;
-}
-.Popup
-{
-	width: 650px;
-	margin: 0 auto;
-	/*background: #fff;*/
-	/*border: solid 1px #ccc;*/
-	position: relative;
-	/*padding: 20px 20px 20px 20px;*/
-	//top: -50%;
-}
-.PopupContent
-{
-	padding: 35px 10px 20px 10px;
-}
-.Popup h1
-{
-	font-size: 1.4em;
-	font-style: italic;
-	font-weight: normal;
-	padding: 0 0 0.5em 0;
-}
-.PopupImage
-{
-	text-align: center;
-}
-.Popup ul
-{
-	list-style-type: none;
-}
-.Popup ul li
-{
-	padding: 0 0 0.8em 0;
-}
-.Popup p
-{
-	padding: 0 0 0.5em 0;
-}
-.Popup .FormList
-{
-	width: 100% !important;
-}
-.PopupButtons
-{
-	padding: 1em 0 0 0;
-	text-align: center;
-	font-size: 1.3em;
-}
-
-
+/* Pager */
 .Pager
 {
 	width: 100%;
-	margin: 20px 0;
-	font-style: italic;
+	margin: 20px 0 0 0;
+	text-align: center;
 }
 .Pager a
 {
-	color: #000;
+	color: #1985a5;
 }
 .Pager a:hover
 {
-	color: #da2438;
+	color: #f56436;
 }
 .Pager .PagerTitle
 {
-	font-size: 1.1em;
+	font-size: 0.9em;
 	font-weight: bold;
 	color: #777;
 	margin: 0 1em 0 0;
 }
 .Pager .PagerControl
 {
-	font-size: 1.1em;
+	font-size: 0.8em;
 	position: relative;
 	top: -0.15em;
-	color: #ccc;
 }
 .PagerControlMargin
 {
@@ -202,24 +240,18 @@
 {
 	display: inline-block;
 	padding: 0.3em 0.5em;
-	font-size: 1.1em;
-	color: #000;
+	font-size: 0.9em;
 }
 .Pager .PageNumber a:hover
 {
-	background: #F2F2F2;
-	color: #da2438;
+	background: #e68006;
+	color: #fff !important;
 }
 .Pager .PageNumber a.Active
 {
-	background: #c08637;
+	background: #e68006;
 	text-decoration: none;
 	color: #fff;
-}
-.Pager .PageNumber a.Active:hover
-{
-	background: #F2F2F2;
-	color: #333;
 }
 .Pager .PagerFirstPage
 {
@@ -232,58 +264,102 @@
 	font-size: 0.8em;
 }
 
-.d-shadow
+
+a:active,
+a:focus,
+input
 {
-	position: relative;
-	margin: 0 24px;
-	padding: 0 0 24px 0;
+	outline: none;
 }
-.d-shadow-wrap
+
+
+/* Popup */
+.HideBlock
+{
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+	min-width: 985px;
+	background: url(../Images/BackGrounds/TransparentBg.png);
+	position: fixed;
+	z-index: 100;
+	left: 0;
+}
+* html .HideBlock
+{
+	width: expression((document.documentElement.clientWidth || document.body.clientWidth) < 985? "985px": "100%");
+	height: expression(document.documentElement.clientHeight + 'px');
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=/media/img/TransparentBg.png,sizingMethod=scale);
+	top: expression( ( topVar = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop )  + 'px' );
+	background-image: none;
+	position: absolute;
+	cursor: default;
+}
+.PopupWindow
+{
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+	position: fixed;
+	display: table;
+	z-index: 200;
+}
+* html .PopupWindow
+{
+	width: expression((document.documentElement.clientWidth || document.body.clientWidth) < 985? "985px" : "100%" );
+	height: expression(eval(document.documentElement.offsetHeight) + "px" );
+	top: expression(eval(document.documentElement.scrollTop) + "px" );
+	position: absolute;
+}
+
+.PopupWindowInner
+{
+	width: 100%;
+	min-height: 100%;
+	position: relative;
+	display: table-cell;
+	vertical-align: middle;
+	//top: 50%;
+}
+.PopupWindowTR
 {
 	width: 100%;
 	position: relative;
-	padding: 0 24px;
-	margin: 0 -24px;
-	overflow: hidden;
+	//top: -50%;
 }
-.d-sh-cn
+.PopupWindowClose
 {
+	display: block;
 	position: absolute;
-	left: -24px;
-	z-index: -1;
-	background: url(../Images/BackGrounds/Popup.png);
+	top: 10px;
+	right: 3%;
+	font-size: 0.8em;
+	border-bottom: dashed 1px #009EDD;
+	color: #009EDD;
+	cursor: pointer;
 }
-.d-sh-tl,
-.d-sh-tr
+.PopupWindowClose:hover
 {
-	height: 1500px;
-	top: -24px;
+	border-bottom: dashed 1px #ec860a !important;
+	color: #ec860a !important;
 }
-.d-sh-tl,
-.d-sh-bl
+.Popup
 {
-	width:100%;
+	width: 500px;
+	margin: 0 auto;
+	background: #fff;
+	border: solid 1px #ccc;
+	position: relative;
+	padding: 20px;
 }
-.d-sh-tr,
-.d-sh-br
+.Popup h1
 {
-	width: 24px;
-	margin-left: 100%;
+	font-size: 1.4em;
+	font-weight: normal;
+	color: #007dc5;
+	padding: 0.5em 0 0.3em 0;
 }
-.d-sh-bl,
-.d-sh-br
+.Popup ul li
 {
-	height: 24px;
-}
-
-.d-sh-bl
-{
-	left: -48px;
-	padding-right: 48px;
-	clip: rect(auto auto auto 24px);
-}
-.d-sh-br
-{
-	left: 0px;
-	//left: -48px;
+	font-size: 0.8em;
 }
