--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,16 @@ a:hover
 	position: relative;
 	z-index: 100;
 }
-
+/* Для justify-ins которым выравниваются блоки по ширине контейнера */
+.HelperIns
+{
+	width: 100%;
+	display: inline-block;
+	text-decoration: none;
+	position: relative;
+	height: 0;
+	font-size: 0;
+}
 /*----------------------------------- Header --------------------------------*/
 .Header
 {
@@ -75,13 +84,67 @@ a:hover
 /*----------------------------------- Content --------------------------------*/
 .Wrapper
 {
-	padding: 0 20px;
+	margin: 20px 35px 0px 50px;
+	font-size: 0.8em;
 	border-top: 1px solid #FFFFFF;
-	background: url(../img/content-background-gradient.png) repeat-x;
+}
+.Wrapper h1
+{
+	margin-top: 25px;
+	font-size: 1.7em;
+}
+.Wrapper h2
+{
+	margin-top: 25px;
+	font-size: 1.6em;
+}
+.Wrapper h3
+{
+	margin-top: 20px;
+	font-size: 1.5em;
+}
+.Wrapper h4
+{
+	margin-top: 15px;
+	font-size: 1.4em;
+}
+.Wrapper h5
+{
+	margin-top: 10px;
+	font-size: 1.35em;
 }
 .Content
 {
 	
+}
+.Content ul,
+.Content ol
+{
+	margin: 0 0 0 35px;
+	line-height: 1.5;
+}
+.Content ul li
+{
+	list-style-type: disc;
+}
+.Content ol li
+{
+	list-style-type: decimal;
+}
+.Content table
+{
+	margin: 0 0 0 15px;
+	border-collapse: collapse;
+}
+.Content th,
+.Content td
+{
+	padding: 5px 15px;
+}
+.Content th
+{
+	border: 1px solid #bbb;
+	font-weight: normal;
 }
 
 /*------------------------------------ Footer --------------------------------*/
@@ -91,4 +154,17 @@ a:hover
 	margin: 0 auto;
 	color: #444;
 	clear: both;
+	font-size: 0.8em;
+}
+.Footer .Copyright
+{
+	padding: 15px 0 5px 0;
+	clear: both;
+	color: #B9B9B9;
+}
+.Footer p
+{
+	color: #545454;
+	line-height: 1.4;
+	font-size: 0.85em;
 }
